# event-driven-ecommerce-analytics

./: .env.example  .gitignore  README.en.md  README.md  prod-test.json
.github/workflows/: schemachange.yml
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/models/marts/: _models.yml  dim_customers.sql  dim_date.sql  fct_order_lifecycle.sql  fct_orders.sql  mart_daily_revenue.sql  mart_order_funnel.sql
dbt_project/models/staging/: _models.yml  _silver__sources.yml  stg_customers_registered.sql  stg_customers_updated.sql  stg_orders_created.sql  stg_orders_status_changed.sql
dbt_project/seeds/: dim_products.csv
docs/runbooks/: 01-bootstrap-snowflake.md  02 - configure-local-environment.md  03-configure-gcp-project.md  04-configure-gcs-iam.md  05-deploy-migrations.md  06 - troubleshooting.md  06-cloudrun-job.md  07-setup-dbt-project.md  08-operating-dbt-workspace.md  10-cicd-githubactions.md
infra/snowflake/environments/: dev.yml  prod.yml  qa.yml
infra/snowflake/migrations/: V001__warehouses_databases_schemas.sql  V002__rbac_roles.sql  V003__rbac_grants.sql  V004__storage_integrations.sql  V005__notification_integrations.sql  V006__bronze_raw_events_layer.sql  V007__silver_dynamic_tables.sql
ingestion/: .dockerignore  Dockerfile  generator.py  main.py  publisher.py  pyproject.toml  requirements.txt  schemas.py
scripts/: generate-keypair.sh  load-env.ps1  setup-gcp-pubsub.ps1
